@@ -5,6 +5,8 @@
 * Add built-in aggregate function accum_pair(x, y), which produces a Set of
   pairs (two-element arrays [x,y]).
 * Restore support for each_with_index() over Bud collections
+* Restore functionality of Zookeeper-backed Bud collections and fix
+  incompatibility with recent (> 0.4.4) versions of the Zookeeper gem
 * Support user-specified code blocks in argagg(), argmin() and argmax()
 * Fix bug in argagg state materialization
 * Fix bug in chaining argmin() or argmax() expressions
